start personal page

--- a/hw2/index.html
+++ b/hw2/index.html
@@ -15,7 +15,7 @@
       <h2>Welcome to My Personal Page</h2>
       <p>
         You can't change the people around you but you can change the people
-        around you."
+        around you.
       </p>
     </div>
 
